kubernetes/apps/default/radarr/ingressRoute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-service-extname
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: radarr.porkboi.io
  labels:
    app.kubernetes.io/name: radarr
spec:
  type: ExternalName
  externalName: porkboi.io
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`radarr.porkboi.io`)
      services:
        - name: radarr
          port: 7979
      middlewares:
        - name: redirect-https
          namespace: networking
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radarr.porkboi.io`)
      services:
        - name: radarr
          port: 7979
